--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "axios-oauth-client": "^1.4.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "next-auth": "^3.5.1",
+    "next-fetch": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
