--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; port=3306; database=dopaminadb; user=root; password=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
