--- a/server/server/WebAPI.csproj
+++ b/server/server/WebAPI.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Endorfina\Endorfina.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
