--- a/server/server/Dockerfile
+++ b/server/server/Dockerfile
@@ -10,14 +10,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["server/server.csproj", "server/"]
-RUN dotnet restore "server/server.csproj"
+COPY ["server/WebAPI.csproj", "server/"]
+RUN dotnet restore "server/WebAPI.csproj"
 COPY . .
 WORKDIR "/src/server"
-RUN dotnet build "server.csproj" -c Release -o /app/build
+RUN dotnet build "WebAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "server.csproj" -c Release -o /app/publish
+RUN dotnet publish "WebAPI.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
