--- a/server/server/Dockerfile
+++ b/server/server/Dockerfile
@@ -10,10 +10,11 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["server/WebAPI.csproj", "server/"]
+# COPY *.csproj ./
+COPY ["WebAPI.csproj", "server/"]
 RUN dotnet restore "server/WebAPI.csproj"
 COPY . .
-WORKDIR "/src/server"
+WORKDIR /src/server
 RUN dotnet build "WebAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -22,4 +23,4 @@ RUN dotnet publish "WebAPI.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "server.dll"]
+ENTRYPOINT ["dotnet", "WebAPI.dll"]
